# Moirae

./: SKILL.md  pyproject.toml
moirae/: __main__.py  camera.py  compositor.py  pipeline.py  recorder.py  schema.py
moirae/fonts/: __init__.py
moirae/scenes/: conversation.py
moirae/scripts/: font_smoke.yaml
