[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "moirae"
version = "0.1.0"
description = "Scripted terminal demo video pipeline (asciinema → agg → ffmpeg)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Peter O'Malley" }]
dependencies = [
    "pillow",
    "numpy",
    "pyyaml",
    "pydantic>=2",
    "rich",
]

[project.urls]
Homepage = "https://github.com/peteromallet/Moirae"

[project.scripts]
moirae = "moirae.__main__:main"

[tool.setuptools]
packages = ["moirae", "moirae.scenes", "moirae.fonts"]
include-package-data = true

[tool.setuptools.package-data]
moirae = ["scripts/*.yaml"]
"moirae.fonts" = ["*.ttf", "OFL.txt"]
